deploy/mainfests/dev.k8s-apps.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: go-backend
spec:
  type: ClusterIP # LoadBalancer, NodePort
  # clusterIP: 10.107.98.176
  selector: { app: "go-backend" }
  ports:
  - { name: http, protocol: TCP, port: 9011, targetPort: 9011 }
  - { name: rpc, protocol: TCP, port: 9021, targetPort: 9021 }
#  ports:
#  ## nodePort port range: 30000-32767
#  ## port: communcation between nodes, targetPort: pod port, nodePort: service node port
#  - { name: http, protocol: TCP, port: 9011, targetPort: 9011, nodePort: 30032 }
#  - { name: grpc, protocol: TCP, port: 9021, targetPort: 9021, nodePort: 30042 }

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: go-backend
  labels: { app: "go-backend" }
spec:
  replicas: 1
  selector:
    matchLabels: { app: "go-backend" }
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
  template:
    metadata:
      labels: { app: "go-backend" }
    spec:
      restartPolicy: Always
      # affinity: ...
      # nodeSelector:
      #   node-role: worker
      terminationGracePeriodSeconds: 5
      volumes:
      - name: config
        configMap: { name: go-backend }
      - name: local
        hostPath: { path: "/data/k8s/local", type: "DirectoryOrCreate" }
      - name: pvc
        persistentVolumeClaim: { claimName: "nfs01" }
      containers:
      - name: go-backend
        # image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/go-backend:dev@sha256xxxx
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/go-backend:dev
        ## imagePullPolicy: IfNotPresent, Always, Never
        imagePullPolicy: "Always"
        resources:
          requests: { cpu: "200m", memory: "128Mi", ephemeral-storage: "2Gi" }
          limits: { cpu: "1000m", memory: "512Mi", ephemeral-storage: "10Gi" }

        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 3
          httpGet: { path: /healthz, port: 9011 }
          tcpSocket: { port: 9011 }
          exec: { command: {cat, /tmp/healthy} }

        livenessProbe:
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          grpc: { port: 9021 }
          #httpGet: # HTTP Status >= 200 and < 400
          #  path: "/healthz"
          #  port: 9021
          #  httpHeaders:
          #  - { name: X-Custom-Header, value: Awesome }
          #exec: { command: [cat, /tmp/healthy] }
          #tcpSocket: { port: 9021 }

        volumeMounts:
        ## not /opt/configs/dev.yaml
        - { name: config, mountPath: /opt/configs, readOnly: true }
        # - { name: local, subPathExpr: "go-backend/$(K8S_PodName)/logs", mountPath: "/opt/logs" }
        # - { name: pvc, subPathExpr: "go-backend/$(K8S_PodName)/data", mountPath: "/opt/data" }
        - { name: local, subPathExpr: "go-backend/logs", mountPath: "/opt/logs" }
        - { name: pvc, subPathExpr: "go-backend/data", mountPath: "/opt/data" }
        ports:
        - { name: "http", containerPort: 9011, protocol: "TCP" }
        - { name: "rpc", containerPort: 9021, protocol: "TCP" }
        # command: [ tail, -f, /etc/hosts ]
        workingDir: /opt
        command: ["./target/main", "api"]
        args: [-release, -config=configs/dev.yaml, -http.addr=:9011, -rpc.addr=:9021]
