deploy/mainfests/prod.k8s-apps.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: go-backend
spec:
  type: ClusterIP
  # clusterIP: 10.107.98.176
  selector: { app: go-backend }
  ports:
  - { name: http, protocol: TCP, port: 9010, targetPort: 9010 }
  - { name: grpc, protocol: TCP, port: 9020, targetPort: 9020 }

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: go-backend
  labels: { app: "go-backend" }
spec:
  replicas: 3
  selector:
    matchLabels: { app: "go-backend" }
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  minReadySeconds: 10
  strategy:
    rollingUpdate: { maxSurge: 1, maxUnavailable: 0 }
    type: RollingUpdate
  template:
    metadata:
      labels: { app: "go-backend" }
    spec:
      restartPolicy: Always
      # nodeSelector:
      #   node-role: worker
      terminationGracePeriodSeconds: 5
      volumes:
      - name: config
        configMap: { name: go-backend }
      - name: local
        hostPath: { path: "/data/k8s/local", type: "DirectoryOrCreate" }
      # - name: pvc
      #   persistentVolumeClaim: { claimName: "go-backend" }
      containers:
      - name: go-backend
        # image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/go-backend:1.0.0@sha256xxxx
        image: registry.cn-shanghai.aliyuncs.com/d2jvkpn/go-backend:1.0.0
        ## imagePullPolicy: IfNotPresent, Always, Never
        imagePullPolicy: "IfNotPresent"
        resources:
          requests: { cpu: "200m", memory: "128Mi" }
          limits: { cpu: "1000m", memory: "512Mi" }
        livenessProbe:
          grpc: { port: 9020 }
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        ## not /opt/configs/prod.yaml
        - { name: config, mountPath: /opt/configs, readOnly: true }
        - { name: local, subPathExpr: "go-backend/$(K8S_PodName)/logs", mountPath: "/opt/logs" }
        # - { name: pvc, subPathExpr: "go-backend/$(K8S_PodName)/data", mountPath: "/opt/data" }
        ports:
        - { name: "http", containerPort: 9010, protocol: "TCP" }
        - { name: "rpc", containerPort: 9020, protocol: "TCP" }
        # command: [ tail, -f, /etc/hosts ]
        workingDir: /opt
        command: ["./target/main", "api"]
        args: ["-release", "-config=configs/prod.yaml", "-http.addr=:9010", "-rpc.addr=:9020"]
