deploy/mainfests/dev.k8s-ctrl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: go-backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/limit-connections: "1024"
    nginx.ingress.kubernetes.io/limit-rps: "256"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: go-backend.k8s-dev.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: { service: { name: http, port: { number: 9011 } } }
      - pathType: ImplementationSpecific
        path: /
        backend: { service: { name: grpc, port: { number: 9021 } } }
